force-app/main/default/objects/Knowledge__kav/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>In order to have an articles available publicly, they have to be approved. You will not be able to publish an article publicly without this. Click the Submit For Approval button to submit it for approval.</description>
    <inlineHelpText>In order to have an articles available publicly, they have to be approved. You will not be able to publish an article publicly without this. Click the Submit For Approval button to submit it for approval.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Pending Approval</fullName>
                
                
                    <label>Pending Approval</label>
                
                </value>
            
                <value>
                
                    <fullName>Approved</fullName>
                
                
                    <label>Approved</label>
                
                </value>
            
                <value>
                
                    <fullName>Rejected</fullName>
                
                
                    <label>Rejected</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>