force-app/main/default/objects/Knowledge__kav/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>