force-app/main/default/objects/Knowledge__kav/recordTypes/Q_A.recordType-meta.xml
<RecordType>
    <fullName>Q_A</fullName>
    <active>true</active>
    <label>Q&amp;A</label>
</RecordType>